--- a/mysql-small.yaml
+++ b/mysql-small.yaml
@@ -1,10 +1,11 @@
 heat_template_version: 2015-10-15
 
 description: |
- #### Production
- Multiple Linux servers with [MySQL 5.6](http://www.mysql.com/) and
- local database backups configured on the Master node with
- [Holland](https://github.com/holland-backup/holland#readme).
+  #### Production
+
+  Multiple Linux servers with [MySQL 5.6](http://www.mysql.com/), configured in
+  a master-slave replication configuration, and local database backups
+  configured on the Master node with [Holland](https://github.com/holland-backup/holland#readme).
 parameter_groups:
   - label: MySQL Settings
     parameters:
@@ -236,7 +237,7 @@ resources:
     properties:
       count: { get_param: server_count }
       resource_def:
-        type: https://raw.githubusercontent.com/rackspace-orchestration-templates/mysql-small/master/mysql-small-secondary.yaml
+        type: https://raw.githubusercontent.com/rackspace-orchestration-templates/mysql-small/stable/mysql-small-secondary.yaml
         properties:
           ssh_key: { get_resource: ssh_key }
           parent_stack_id: { get_param: "OS::stack_id" }
@@ -257,7 +258,7 @@ resources:
 
 outputs:
   mysql_public_ip:
-    description: Load Balancer IP
+    description: Master IP
     value:
       get_attr: [mysql_server, accessIPv4]
   mysql_password:
@@ -276,10 +277,6 @@ outputs:
     description: SSH Private Key
     value:
       get_attr: [ssh_key, private_key]
-  server_ip:
-    description: Server Public IP
-    value:
-      get_attr: [mysql_server, accessIPv4]
   secondary_ips:
     description: Secondary Node IPs
     value:
