--- a/mysql-small.yaml
+++ b/mysql-small.yaml
@@ -11,17 +11,14 @@ parameter_groups:
     parameters:
     - mysql_user
     - mysql_database
+  - label: rax-dev-params
+    parameters:
+    - server_image
+    - secondary_template
+    - ansible_branch
+    - ansible_repo
 parameters:
   #MySQL Customization
-  #Advanced Options
-#  server_image:
-#    type: string
-#    default: f4bbbce2-50b0-4b07-bf09-96c175a45f4b
-#    label: Server Image
-#    description: Image to be used for all servers in this stack
-#    constraints:
-#    - allowed_values:
-#      - f4bbbce2-50b0-4b07-bf09-96c175a45f4b
   mysql_user:
     type: string
     default: mysql_user
@@ -32,6 +29,7 @@ parameters:
     default: mysql_db
     label: MySQL Database
     description: Database to create within MySQL.  User defined in "MySQL User" will have full access to this database
+  #Advanced Options
   server_flavor:
     type: string
     default: 4 GB General Purpose v1
@@ -50,6 +48,29 @@ parameters:
     description: Number of secondary web nodes
     constraints:
       - range: { min: 0, max: 10 }
+  server_image:
+    type: string
+    default: f4bbbce2-50b0-4b07-bf09-96c175a45f4b
+    label: Server Image
+    description: Image to use for WordPress
+    constraints:
+    - allowed_values:
+      - f4bbbce2-50b0-4b07-bf09-96c175a45f4b
+  secondary_template:
+    type: string
+    default: https://raw.githubusercontent.com/rackspace-orchestration-templates/mysql-small/master/mysql-small-secondary.yaml
+    label: Secondary Template
+    description: Template to use for secondary servers
+  ansible_branch:
+    type: string
+    default: stable
+    label: Git Branch or Tag for Ansible Roles
+    description: The Ansible Roles will be pulled from Git, using the tag or branch provided
+  ansible_repo:
+    type: string
+    default: https://github.com/rackspace-orchestration-templates/ansible-roles.git
+    label: Git Repo for Ansible Roles
+    description: The Ansible Roles will be pulled from Git, using the repo provided
 
 resources:
   #Passwords
@@ -74,10 +95,15 @@ resources:
       group: script
       outputs:
       - name: results
-      config: |
-        #!/bin/bash
-        set -e
-        git clone -b 'stable' --single-branch --progress https://github.com/rackspace-orchestration-templates/ansible-roles.git /etc/ansible/roles > $heat_outputs_path.results 2>&1
+      config:
+        str_replace:
+          template: |
+            #!/bin/bash
+            set -e
+            git clone -b 'tag' --single-branch --progress repository /etc/ansible/roles > $heat_outputs_path.results 2>&1
+          params:
+            tag: { get_param: ansible_branch}
+            repository: { get_param: ansible_repo }
 
   mysql_config:
     type: OS::Heat::SoftwareConfig
@@ -85,7 +111,7 @@ resources:
       group: ansible
       config: |
         ---
-        - name: Install and configure LAMP
+        - name: Install and configure MySQL
           hosts: localhost
           connection: local
           roles:
@@ -165,8 +191,7 @@ resources:
     type: OS::Nova::Server
     properties:
       name: { get_param: "OS::stack_name" }
-#      image: { get_param: server_image }
-      image: f4bbbce2-50b0-4b07-bf09-96c175a45f4b
+      image: { get_param: server_image }
       flavor: { get_param: server_flavor }
       key_name: { get_resource: ssh_key }
       software_config_transport: POLL_TEMP_URL
@@ -175,74 +200,17 @@ resources:
       metadata:
         rax-heat: { get_param: "OS::stack_id" }
         build_config: "backup_agent_only,monitoring_defaults"
-  #Monitoring Checks
-#  mysql_server_http_check:
-#    type: Rackspace::CloudMonitoring::Check
-#    depends_on: deploy_mysql
-#    properties:
-#      entity: { get_resource: mysql_server }
-#      type: remote.http
-#      label:
-#        str_replace:
-#          template: stack Master HTTP Check
-#          params:
-#            stack: { get_param: "OS::stack_name" }
-#      details:
-#        url:
-#          str_replace:
-#            template: "http://ipaddr"
-#            params:
-#              ipaddr: { get_attr: [mysql_server, accessIPv4] }
-#      metadata:
-#        rax-heat: { get_param: "OS::stack_id" }
-#        stack-name: { get_param: "OS::stack_name" }
-#      period: 120
-#      timeout: 10
-#      monitoring_zones_poll:
-#      - Northern Virginia (IAD)
-#      - Chicago (ORD)
-#      - Dallas Fort Worth (DFW)
-#      - London (LON)
-#      target_hostname: { get_attr: [mysql_server, accessIPv4] }
-#      target_receiver: IPv4
-  #Cloud Backup
-#  mysql_backup:
-#    type: Rackspace::Cloud::BackupConfig
-#    depends_on: mysql_server
-#    properties:
-#      host_ip_address: { get_attr: [mysql_server, accessIPv4] }
-#      BackupConfigurationName:
-#        str_replace:
-#          template: stack Weekly Backup
-#          params:
-#            stack: { get_param: "OS::stack_name" }
-#      Inclusions:
-#      - FilePath: "/var/spool/holland"
-#        FileItemType: "Folder"
-#      - FilePath: "/var/www"
-#        FileItemType: "Folder"
-#      NotifyFailure: true
-#      NotifyRecipients: { get_param: backup_email }
-#      TimeZoneId: Central Standard Time
-#      StartTimeAmPm: AM
-#      StartTimeHour: 1
-#      StartTimeMinute: 0
-#      HourInterval: null
-#      DayOfWeekId: 0
-#      Frequency: "Weekly"
-#      VersionRetention: 30
   #Secondary Server
   mysql_secondary:
     type: OS::Heat::ResourceGroup
     properties:
       count: { get_param: server_count }
       resource_def:
-        type: https://raw.githubusercontent.com/rackspace-orchestration-templates/mysql-small/stable/mysql-small-secondary.yaml
+        type: { get_param: secondary_template }
         properties:
           ssh_key: { get_resource: ssh_key }
           parent_stack_id: { get_param: "OS::stack_id" }
-#          server_image: { get_param: server_image }
-          server_image: f4bbbce2-50b0-4b07-bf09-96c175a45f4b
+          server_image: { get_param: server_image }
           server_flavor: { get_param: server_flavor }
           server_name:
             str_replace:
@@ -255,6 +223,8 @@ resources:
           mysql_slave_user: mysql_slave
           mysql_slave_password: { get_attr: [slave_pass, value] }
           mysql_role: slave
+          ansible_branch: { get_param: ansible_branch}
+          ansible_repo: { get_param: ansible_repo }
 
 outputs:
   mysql_public_ip:
