Using Cloud Files

--- a/mysql-small-secondary.yaml
+++ b/mysql-small-secondary.yaml
@@ -43,12 +43,12 @@ parameters:
     type: string
   mysql_role:
     type: string
-  ansible_branch:
+  ansible_source:
     type: string
-    default: stable
-  ansible_repo:
-    type: string
-    default: https://github.com/rackspace-orchestration-templates/ansible-roles.git
+    default: http://catalog.rs-heat.com/ansible-roles/ansible-roles.tar.gz
+    label: Ansible Tarball
+    description: The Ansible Roles will be pulled from the location provided
+    immutable: true
 resources:
   upload_role_config:
     type: OS::Heat::SoftwareConfig
@@ -61,10 +61,11 @@ resources:
           template: |
             #!/bin/bash
             set -e
-            git clone -b 'tag' --single-branch --progress repository /etc/ansible/roles > $heat_outputs_path.results 2>&1
+            mkdir -p /etc/ansible/roles
+            wget ansible_source -O /tmp/ansible-roles.tar.gz 2>&1
+            tar -xf /tmp/ansible-roles.tar.gz --strip-components=1 -C /etc/ansible/roles
           params:
-            tag: { get_param: ansible_branch}
-            repository: { get_param: ansible_repo }
+            ansible_source: { get_param: ansible_source }
 
   mysql_config:
     type: OS::Heat::SoftwareConfig
