Adding CentOS Support

--- a/mysql-small.yaml
+++ b/mysql-small.yaml
@@ -13,7 +13,6 @@ parameter_groups:
     - mysql_database
   - label: rax-dev-params
     parameters:
-    - server_image
     - secondary_template
     - ansible_source
 parameters:
@@ -49,12 +48,14 @@ parameters:
       - range: { min: 0, max: 10 }
   server_image:
     type: string
-    default: f4bbbce2-50b0-4b07-bf09-96c175a45f4b
+    default: Ubuntu 14.04 LTS (Trusty Tahr) (PVHVM) (Orchestration)
     label: Server Image
-    description: Image to use for WordPress
+    description: Image to be used for all servers in this stack
     constraints:
     - allowed_values:
-      - f4bbbce2-50b0-4b07-bf09-96c175a45f4b
+      - Ubuntu 14.04 LTS (Trusty Tahr) (PVHVM) (Orchestration)
+      - CentOS 7 (PVHVM) (Orchestration)
+    immutable: true
   secondary_template:
     type: string
     default: http://catalog.rs-heat.com/mysql-small/mysql-small-secondary.yaml
